# ProjectAD3

./: .gitignore  sources
assignment/: README.md  utf8-example.c
extra/: .gitignore
memory_usage_meter/: check_memory.sh
src/: CMakeLists.txt  main.c
src/ArgumentParser/: ArgumentParser.c  ArgumentParser.h
src/DatabaseReader/: DatabaseReader.c  DatabaseReader.h
src/Helpers/ErrorHandler/: ErrorHandler.c  ErrorHandler.h
src/Helpers/MemoryUsageMeter/: MemoryUsageMeter.c  MemoryUsageMeter.h
src/Helpers/Printer/: Printer.c  Printer.h
src/Helpers/Timer/: Timer.c  Timer.h
src/Helpers/UTF8/: accents.c  accents.h  utf8.c  utf8.h
src/InputReader/: InputReader.c  InputReader.h
src/ScoreCalculator/: ScoreCalculator.c  ScoreCalculator.h
src/Searcher/: Searcher.c  Searcher.h
src/SubSetGenerator/: SubSetGenerator.c  SubSetGenerator.h
tests/: generateData.sh  runTests.sh
tests/FunctionTests/: CMakeLists.txt  Tester1.c  Tester1.h  Tester2.c  Tester2.h  test_main.c
tests/TestSolutions/: test1  test3  test4  test6
